wrong margin fixed

--- a/css/question.css
+++ b/css/question.css
@@ -23,6 +23,7 @@
     border-bottom:3px solid #7dc9cd;
     letter-spacing:0.8px;
     padding-bottom:10px;
+    margin-bottom:20px;
 }
 
 .question .navigation {
